<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:paddingStart="12dp"
    android:paddingLeft="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="12dp">

    <LinearLayout
        android:layout_marginTop="12dp"
        android:id="@+id/ll_order_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:includeFontPadding="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_order_details_order_searial"
            android:textColor="#ffb2b2b2"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/mine_order_details_order_searial_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.00"
            android:includeFontPadding="false"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:id="@+id/ll_order_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_order_details_order_book_time"
            android:textColor="#ffb2b2b2"
            android:includeFontPadding="false"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/mine_order_details_order_book_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.00"
            android:textColor="@color/text_color"
            android:includeFontPadding="false"
            android:textSize="13sp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="#ffececec" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_payer"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:includeFontPadding="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="消费账户"
            android:textColor="#ffb2b2b2"
            android:textSize="13sp"
            />

        <TextView
            android:includeFontPadding="false"
            android:id="@+id/mine_order_details_payer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.00"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="12dp"
        android:id="@+id/ll_pay_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_order_details_pay_method"
            android:textColor="#ffb2b2b2"
            android:textSize="13sp"
            android:includeFontPadding="false"
            />

        <TextView
            android:id="@+id/mine_order_details_pay_method_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.00"
            android:includeFontPadding="false"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="12dp"
        android:id="@+id/ll_pay_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/mine_order_details_pay_time"
            android:textColor="#ffb2b2b2"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/mine_order_details_pay_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.00"
            android:includeFontPadding="false"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:id="@+id/ll_transaction_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/mine_order_details_tran_time"
            android:textColor="#ffb2b2b2"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/mine_order_details_tran_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.00"
            android:includeFontPadding="false"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:id="@+id/ll_reward_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/mine_order_details_receive_time"
            android:textColor="#ffb2b2b2"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/mine_order_details_receive_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="￥0.00"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            />
    </LinearLayout>


</LinearLayout>